[package]
name = "loadstone_config"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0.63", features = ["full", "fold"] }
quote = "1.0.9"
anyhow = "*"
tightness = "*"
enum-iterator = "*"
itertools = "*"

[dependencies.ecdsa]
version = "0.11"
default-features = false
features = ["pem"]

[dependencies.sha2]
version = "0.9.5"
default-features = false

[dependencies.p256]
version = "0.8.1"
default-features = false
features = ["ecdsa", "sha256", "pem"]
