[package]
name = "loadstone_config"
version = "1.1.0"
edition = "2018"
license = "MIT"
description = "Portable secure bootloader for Cortex-M MCUs - Configuration layer"
repository = "https://github.com/absw/loadstone"
keywords = ["embedded", "bootloader", "cortex", "secure", "bare_metal"]
categories = ["embedded", "no-std"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0.63", features = ["full", "fold"] }
quote = "1.0.9"
anyhow = "1.0.*"
tightness = "1.0.*"
enum-iterator = "0.6.*"
itertools = "0.10.*"

[dependencies.ecdsa]
version = "0.11"
default-features = false
features = ["pem"]

[dependencies.sha2]
version = "0.9.5"
default-features = false

[dependencies.p256]
version = "0.8.1"
default-features = false
features = ["ecdsa", "sha256", "pem"]
