[package]
name = "loadstone_config"
version = "1.1.0"
edition = "2018"
license = "MIT"
description = "Portable secure bootloader for Cortex-M MCUs - Configuration layer"
repository = "https://github.com/absw/loadstone"
keywords = ["embedded", "bootloader", "cortex", "secure", "bare_metal"]
categories = ["embedded", "no-std"]

[dependencies]
quote = "1"
anyhow = "1"
tightness = "1"
enum-iterator = "0.6"
itertools = "0.10"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.syn]
version = "1"
features = ["full", "fold"]

[dependencies.ecdsa]
version = "0.11"
default-features = false
features = ["pem"]

[dependencies.sha2]
version = "0.9"
default-features = false

[dependencies.p256]
version = "0.8"
default-features = false
features = ["ecdsa", "sha256", "pem"]
