[package]
name = "loadstone_front"
version = "1.0.0"
edition = "2018"
license = "MIT"
description = "Portable secure bootloader for Cortex-M MCUs - Builder Web App"
repository = "https://github.com/absw/loadstone"
readme = "README.md"
keywords = ["embedded", "bootloader", "cortex", "secure", "bare_metal"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", features = ["http"] } # Gives us egui, epi and web+native backends
anyhow = "*"
itertools = "*"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
web-sys = { version = "*", features = ["Blob", "BlobPropertyBag", "Url"] }
wasm-bindgen-futures = "*"
ron = "*"
base64 = "*"
git-version = "*"
reqwest-wasm = "*"
futures = "*"
loadstone_config = { path = "../loadstone_config/" }
atomic_refcell = "*"
enum-iterator = "*"
getrandom = { version = "*", features = ["js"] }

[dependencies.ecdsa]
version = "*"
features = ["pem"]

[dependencies.sha2]
version = "*"

[dependencies.p256]
version = "*"
features = ["ecdsa", "sha256", "pem"]

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
