[package]
name = "signing_tool"
version = "0.2.0"
edition = "2018"
description = "Tool to calculate and append signatures to images."

[dependencies]
clap = "2"
base64 = "0.13"
crc = "1.8"
sha2 = "0.9"
blue_hal = "1"

[dependencies.ecdsa]
version = "0.11"
features = ["pem"]

[dependencies.p256]
version = "0.8"
features = ["ecdsa", "sha256", "pem"]
