[package]
name = "server"
version = "0.1.0"
authors = ["Arron Speake <arron.speake@bluefruit.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
warp = { version = "0.3", features = ["compression"] }
serial = "0.4"
regex = "1"
futures = "0.3"
